<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/action_lookup"
      android:showAsAction="ifRoom"
      android:title="@string/lookup"
      android:icon="@drawable/ic_action_storage" />

  <item
      android:id="@+id/action_help"
      android:showAsAction="ifRoom"
      android:title="@string/help"
      android:icon="@drawable/ic_action_help" />

  <item
      android:id="@+id/action_about"
      android:showAsAction="ifRoom"
      android:title="@string/about"
      android:icon="@drawable/ic_action_about" />

  <item
      android:id="@+id/action_dark"
      android:showAsAction="never"
      android:title="@string/dark"
      android:checkable="true"
      android:checked="true" />

</menu>
