<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    tools:ignore="Autofill">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:gravity="center_horizontal"
      android:text="@string/lookup_info"
      android:textSize="16sp" />

  <EditText
      android:id="@+id/lu_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/name"
      android:inputType="textCapWords" />

  <EditText
      android:id="@+id/lu_url"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/url"
      android:inputType="textUri" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="horizontal"
      style="?android:attr/buttonBarStyle">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        style="?android:attr/buttonBarButtonStyle" />

  </LinearLayout>

  <ListView
      android:id="@+id/list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:choiceMode="singleChoice" />

</LinearLayout>
